# resumeanalyzer

./: .env.example  .gitignore  CLEANUP_SUMMARY.md  LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt  test_model_config.py
.github/: copilot-instructions.md
docs/superpowers/specs/: 2026-06-22-ui-feature-improvements-design.md
static/: styles.css
tests/: __init__.py  test_ai_analyzer.py  test_basic.py  test_resume_writer.py  test_text_extractor.py
utils/: __init__.py  ai_analyzer.py  resume_writer.py  text_extractor.py  text_processor.py  visualizer.py
